# self-driving-car

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yml
openspec/changes/codebase-quality-improvements/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/codebase-quality-improvements/specs/: cli-exit-refactor.md  engine-result-types.md  field-constructor-validation.md  project-packaging.md
openspec/changes/command-line-interface-for-car-simulation/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/command-line-interface-for-car-simulation/specs/: car-registration-flow.md  field-setup-prompt.md  run-and-result.md
openspec/changes/develop-auto-driving-car-simulation/: .openspec.yaml  design.md  proposal.md  review-report.md  tasks.md
openspec/changes/develop-auto-driving-car-simulation/specs/: car-navigation.md  collision-detection.md  field-initialization.md  simulation-runner.md
src/: car.py  cli.py  collision.py  field.py  simulation.py
tests/: test_car.py  test_cli_car.py  test_cli_e2e.py  test_cli_field.py  test_cli_run.py  test_collision.py  test_field.py  test_simulation.py
